# video_player

./: CMakeLists.txt  README.md  configure.sh  distclean.sh  run.sh
src/: MTCReader.cpp  MTCReader.hpp  al_MediaBuffer.hpp  al_VideoApp.cpp  al_VideoApp.hpp  al_VideoDecoder.cpp  al_VideoDecoder.hpp  al_VideoPlayer.cpp  al_VideoPlayer.hpp  al_VideoReader.cpp  al_VideoReader.hpp  basicPlayVideo.cpp  basicSaveFrame.cpp  common.h  main.cpp  pixelpushing_encode-render.cpp  pixelpushing_encode.cpp  videoplayback.cpp  videoplayback.hpp
src/archive/: al_VideoPlayer.cpp  al_VideoPlayer.hpp  al_VideoPlayer_Encode.cpp  basicPlayVideoAudio.cpp  pixelpushing.cpp
